<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_refresh_news"
            android:icon="@drawable/ic_refresh_news"
            android:title="@string/nav_refresh_news_title" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/nav_bookmarks_title" />

    </group>

    <item android:title="@string/tools_group_title">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_settings_title" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about_info"
                android:title="@string/nav_about_title" />
        </menu>
    </item>

</menu>
